# glmemperf

./: .gitignore  AndroidManifest.xml  Makefile.am  README  README.Android  blitmultitest.cpp  blitmultitest.h  blittest.cpp  blittest.h  build.xml  cleartest.cpp  cleartest.h  configure.ac  cpuinterleavingtest.cpp  cpuinterleavingtest.h  ext.h  fboblittest.cpp  fboblittest.h  glmemperf-create-ref.sh  glmemperf.cpp  local.properties  native.h  native_x11.c  pixmapblittest.cpp  pixmapblittest.h  runner_android.cpp  runner_cli.cpp  shaderblittest.cpp  shaderblittest.h  test.cpp  test.h  tests.inl  util.cpp  util.h
assets/data/: abstract3_02_256x256_rgba565.raw  abstract3_02_256x256_rgba8888.raw  abstract3_04_1024x512_r8.raw  (+33 more)
data/: COPYING  Makefile.am  abstract3_02_256x256_rgba565.raw  abstract3_02_256x256_rgba8888.raw  abstract3_04_1024x512_r8.raw  abstract3_04_800x480_r8.raw  abstract3_1024x512_etc1.pvr  abstract3_1024x512_etc1.raw  abstract3_1024x512_pvrtc2.pvr  abstract3_1024x512_pvrtc2.raw  abstract3_1024x512_pvrtc4.pvr  abstract3_1024x512_pvrtc4.raw  abstract3_512x1024_etc1.pvr  abstract3_512x1024_etc1.raw  abstract3_512x1024_pvrtc2.pvr  abstract3_512x1024_pvrtc2.raw  abstract3_512x1024_pvrtc4.pvr  abstract3_512x1024_pvrtc4.raw  blur_1024x512_etc1.pvr  blur_1024x512_etc1.raw  digital_nature2_1024x512_rgb565.pvr  digital_nature2_1024x512_rgb565.raw  digital_nature2_1024x512_rgba8888.raw  digital_nature2_512x1024_rgb565.raw  digital_nature2_512x1024_rgba8888.raw  expand-pot.py  rotate.py  water2_480x800_rgb565.raw  water2_480x800_rgb888.raw  water2_480x800_rgba8888.raw  water2_480x864_rgb888.raw  water2_480x864_rgba8888.raw  water2_800x480_rgb565.pvr  water2_800x480_rgb565.raw  water2_800x480_rgb888.raw  water2_800x480_rgba8888.raw  water2_864x480_rgb888.raw  water2_864x480_rgba8888.raw  water4_1024x512_rgba8888.raw  xorg-alpha_128x128_etc1.pvr  (+15 more)
debian/: Makefile.am  changelog  control  copyright  files  glmemperf-data.copyright  rules
jni/: Android.mk
(+1 files in other folders)
